src/test/deca/context/valid/Objet/Cast-Down.deca
// Description:
//      Casting down
//
// Results:
//      nothing
//
// History:
//      created on 17/1/2022

class A {
    protected int x;
    void foo() {
    }
}

class B extends A{
    boolean y;
}

{
    A a = new A();
    B b = (B) (a);
}
